ingress_rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
