byeworld-pod.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: byeworld-deployment
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: byeworld
  replicas: 1 
  template: 
    metadata:
      labels:
        app: byeworld
    spec:
      containers:
      - name: bye-world
        image: kitematic/hello-world-nginx
        ports:
        - containerPort: 80
