helloworld-pod.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1 
  template: 
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: hello-world
        image: kitematic/hello-world-nginx:latest
        ports:
        - containerPort: 80
