helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: ingress-nginx
  labels:
    service: helloworld
spec:
  type: NodePort
  ports:
   - name: http
     port: 5000
     targetPort: 80
     protocol: TCP
  selector:
    app: helloworld
