nginx-ingress-controller.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-default-backend
  namespace: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: nginx-default-backend
---

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx-default-backend
  namespace: nginx-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-default-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
       - name: default-http-backend
         image: gcr.io/google_containers/defaultbackend:1.4
         livenessProbe:
           httpGet:
             path: /healthz
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 30
           timeoutSeconds: 5
         resources:
           limits:
             cpu: 10m
             memory: 20Mi
         ports:
          - name: http
            containerPort: 8080
            protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: nginx-ingress-controller
  namespace: nginx-ingress
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        k8s-app: nginx-ingress-lb
    spec: 
      terminationGracePeriodSeconds: 60
      serviceAccountName: nginx-ingress-serviceaccount
      containers: 
        - name: nginx-ingress-controller
#          image: "gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15"
#          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.9.0-beta.17"
          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.16.2"
          imagePullPolicy: Always
          ports: 
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          args:
           - /nginx-ingress-controller
           - --default-backend-service=$(POD_NAMESPACE)/nginx-default-backend
           - --report-node-internal-ip-address=true
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: nginx-ingress
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    k8s-app: nginx-ingress-lb
