nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
   - name: http
     port: 5000
     targetPort: 80
     protocol: TCP
  externalIPs:
    - 10.44.180.103
  selector:
    app: nginx
