ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
  name: demo-ingress
  namespace: nginx-ingress
spec:
  rules:
  - host: kubernetes-master
    http:
      paths:
      - path: /helloworld
        backend:
          serviceName: helloworld-service
          servicePort: 80
      - path: /byeworld
        backend:
          serviceName: byeworld-service
          servicePort: 80
